--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "deploy": "hardhat run scripts/deploy.js --network localhost"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.0",
-    "ethers": "^5.7.2",
-    "next": "^13.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "web3modal": "^1.9.12",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.12.16"
+    "@openzeppelin/contracts": "^4.9.0",
+    "ethers": "^5.7.2",
+    "framer-motion": "^10.12.16",
+    "next": "^13.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "chai": "^4.3.7",
-    "ethereum-waffle": "^4.0.10",
-    "hardhat": "^2.17.0",
     "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.0"
+    "eslint-config-next": "^13.4.0",
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.24.3"
   }
-} 
+}
