--- a/.env
+++ b/.env
@@ -1,11 +1,6 @@
-# Smart Contract
-NEXT_PUBLIC_CONTRACT_ADDRESS=your_contract_address
-
 # Network Configuration
-PRIVATE_KEY=your_private_key
-GOERLI_RPC_URL=your_goerli_rpc_url
-MAINNET_RPC_URL=your_mainnet_rpc_url
+NEXT_PUBLIC_NETWORK_ID=1337
+NEXT_PUBLIC_RPC_URL=http://localhost:8545
 
-# Optional: API Keys for additional services
-ETHERSCAN_API_KEY=your_etherscan_api_key
-ALCHEMY_API_KEY=your_alchemy_api_key 
+# Contract Address (this will be updated after deployment)
+NEXT_PUBLIC_CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
