Fix dependencies and keyframes animation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "hardhat run scripts/deploy.js --network localhost"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
